--- a/examples/Group.ipynb
+++ b/examples/Group.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x179f0e364c0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1ebf90271f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='54719442'),\n Group(type=<ObjectType.GROUP: 'group'>, id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877'),\n Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='22297858'),\n Group(type=<ObjectType.GROUP: 'group'>, id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='93636027')]"
+      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, id='179', is_system=True, name='name2', description='New', created_at=datetime.datetime(2022, 7, 13, 9, 42, 40, 627000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 13, 9, 42, 42, 512000, tzinfo=datetime.timezone.utc), digest='71442204'),\n Group(type=<ObjectType.GROUP: 'group'>, id='181', is_system=True, name='name4', description='New', created_at=datetime.datetime(2022, 7, 13, 10, 3, 48, 458000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 13, 10, 3, 50, 63000, tzinfo=datetime.timezone.utc), digest='81894464'),\n Group(type=<ObjectType.GROUP: 'group'>, id='177', is_system=True, name='name', description='New', created_at=datetime.datetime(2022, 7, 13, 8, 11, 44, 321000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 13, 8, 11, 45, 984000, tzinfo=datetime.timezone.utc), digest='59935096'),\n Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='99186141'),\n Group(type=<ObjectType.GROUP: 'group'>, id='180', is_system=True, name='name3', description='New', created_at=datetime.datetime(2022, 7, 13, 9, 57, 52, 736000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 13, 9, 58, 16, 84000, tzinfo=datetime.timezone.utc), digest='33108553'),\n Group(type=<ObjectType.GROUP: 'group'>, id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='50912561'),\n Group(type=<ObjectType.GROUP: 'group'>, id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877'),\n Group(type=<ObjectType.GROUP: 'group'>, id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='54719442')]"
      },
      "execution_count": 3,
      "metadata": {},
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.users import Group\n",
+    "from signals_notebook.users.group import Group\n",
     "\n",
     "group = Group.get_list()\n",
     "list(group)"
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='22297858')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='99186141')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -99,7 +99,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='174', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 12, 8, 32, 10, 6000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 8, 32, 10, 6000, tzinfo=datetime.timezone.utc), digest='38068452')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='183', is_system=True, name='name5', description='test2', created_at=datetime.datetime(2022, 7, 13, 10, 24, 57, 183000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 13, 10, 24, 57, 183000, tzinfo=datetime.timezone.utc), digest='30222225')"
      },
      "execution_count": 5,
      "metadata": {},
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "group = Group.create(name='name', description='test', is_system=True)\n",
+    "group = Group.create(name='name5', description='test2', is_system=True)\n",
     "\n",
     "group"
    ],
@@ -139,7 +139,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov')]"
+      "text/plain": "[User(id='119', first_name='Evgeniy', last_name='Pokidov', email='evgeniy.pokidov@quantori.com', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), is_enabled=True, username='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', country='USA', organization='quantori', last_login_at=datetime.datetime(2022, 7, 12, 10, 43, 17, 16000, tzinfo=datetime.timezone.utc)),\n User(id='103', first_name='Sergey', last_name='Kuznetsov', email='sergey.kuznetsov@quantori.com', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), is_enabled=True, username='sergey.kuznetsov@quantori.com', alias=None, country='USA', organization='quantori', last_login_at=datetime.datetime(2022, 7, 13, 10, 25, 0, 75000, tzinfo=datetime.timezone.utc))]"
      },
      "execution_count": 7,
      "metadata": {},
@@ -147,9 +147,9 @@
     }
    ],
    "source": [
-    "from signals_notebook.users import UserStore\n",
+    "from signals_notebook.users.user import User\n",
     "\n",
-    "user = UserStore.get('119')\n",
+    "user = User.get('119')\n",
     "\n",
     "group.add_user(user)"
    ],
@@ -166,7 +166,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov'),\n GroupMember(user_id='103', user_name='sergey.kuznetsov@quantori.com', first_name='Sergey', last_name='Kuznetsov')]"
+      "text/plain": "[User(id='119', first_name='Evgeniy', last_name='Pokidov', email='evgeniy.pokidov@quantori.com', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), is_enabled=True, username='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', country='USA', organization='quantori', last_login_at=datetime.datetime(2022, 7, 12, 10, 43, 17, 16000, tzinfo=datetime.timezone.utc)),\n User(id='103', first_name='Sergey', last_name='Kuznetsov', email='sergey.kuznetsov@quantori.com', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), is_enabled=True, username='sergey.kuznetsov@quantori.com', alias=None, country='USA', organization='quantori', last_login_at=datetime.datetime(2022, 7, 13, 10, 25, 1, 52000, tzinfo=datetime.timezone.utc))]"
      },
      "execution_count": 8,
      "metadata": {},
