--- a/examples/Attributes.ipynb
+++ b/examples/Attributes.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x10e9ed550>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x235c7901040>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -63,7 +63,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Attribute(type='choice', id='attribute:8', name='GHS Signal Words', options=['WARNING', 'DANGER'])"
+      "text/plain": "Attribute(type='choice', id='attribute:8', name='GHS Signal Words')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -87,7 +87,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'WARNING'"
+      "text/plain": "[Attribute(type='attribute', id='attribute:8', name='GHS Signal Words'),\n Attribute(type='attribute', id='attribute:10', name='Hazard Statements'),\n Attribute(type='attribute', id='attribute:11', name='GHS Hazards'),\n Attribute(type='attribute', id='attribute:14', name='Task Status'),\n Attribute(type='attribute', id='attribute:18', name='Inventory Security'),\n Attribute(type='attribute', id='attribute:9', name='Precautionary Statements'),\n Attribute(type='attribute', id='attribute:4', name='Material Library Type'),\n Attribute(type='attribute', id='attribute:24', name='HPLC Sample Type'),\n Attribute(type='attribute', id='attribute:26', name='newAttribute'),\n Attribute(type='attribute', id='attribute:20', name='My List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:28', name='test'),\n Attribute(type='attribute', id='attribute:17', name='Inventory Container Library'),\n Attribute(type='attribute', id='attribute:16', name='Inventory Location Library'),\n Attribute(type='attribute', id='attribute:21', name='My Ext List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:25', name='Primer. Forward or Reverse'),\n Attribute(type='attribute', id='attribute:23', name='HPLC Method'),\n Attribute(type='attribute', id='attribute:19', name='My Number Sequence Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:5', name='Product Id'),\n Attribute(type='attribute', id='attribute:6', name='Parallel Subexperiment Id'),\n Attribute(type='attribute', id='attribute:12', name='Sample Id'),\n Attribute(type='attribute', id='attribute:13', name='Task Id'),\n Attribute(type='attribute', id='attribute:15', name='Order Id')]"
      },
      "execution_count": 5,
      "metadata": {},
@@ -95,7 +95,8 @@
     }
    ],
    "source": [
-    "attribute('WARNING')\n"
+    "attributes = Attribute.get_list()\n",
+    "list(attributes)"
    ],
    "metadata": {
     "collapsed": false,
@@ -109,20 +110,76 @@
    "execution_count": 6,
    "outputs": [
     {
+     "data": {
+      "text/plain": "Attribute(type='choice', id='attribute:32', name='test1')"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from signals_notebook.attributes.attribute import AttributeOption\n",
+    "\n",
+    "option = AttributeOption(id='1', key='key', value='value')\n",
+    "new_attribute = Attribute.create(name='test1', type='choice', description='description', options=[option])\n",
+    "new_attribute"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
      "ename": "ValueError",
-     "evalue": "Incorrect attribute value",
+     "evalue": "\"Attribute\" object has no field \"options\"",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [6]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mattribute\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mINCORRECT\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/PycharmProjects/pesn-python-sdk/src/signals_notebook/attributes/attribute.py:37\u001B[0m, in \u001B[0;36mAttribute.__call__\u001B[0;34m(self, value)\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__call__\u001B[39m(\u001B[38;5;28mself\u001B[39m, value: \u001B[38;5;28mstr\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mstr\u001B[39m:\n\u001B[1;32m     36\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m value \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39moptions:\n\u001B[0;32m---> 37\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mIncorrect attribute value\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     39\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m value\n",
-      "\u001B[0;31mValueError\u001B[0m: Incorrect attribute value"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39moptions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      2\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39msave()\n",
+      "File \u001B[1;32mc:\\users\\andrey.shishkin\\pycharmprojects\\pesn-python-sdk\\venv\\lib\\site-packages\\pydantic\\main.py:357\u001B[0m, in \u001B[0;36mpydantic.main.BaseModel.__setattr__\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;31mValueError\u001B[0m: \"Attribute\" object has no field \"options\""
      ]
     }
    ],
    "source": [
-    "attribute('INCORRECT')"
+    "new_attribute.options = []\n",
+    "new_attribute.save()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "new_attribute.delete()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "attribute('WARNING')\n"
    ],
    "metadata": {
     "collapsed": false,
